--- a/css/site.css
+++ b/css/site.css
@@ -1,8 +1,20 @@
 :root {
   --primary-color: #1d5888;
-  --secondary-color: #ff993b;
+  --secondary-color: #32c3af;
   --dark-color: #292929;
-  --white-color: #e7e7e7;
+  --light-color: #e7e7e7;
+}
+
+.odd {
+  font-weight: 100;
+}
+
+.even {
+  font-weight: bold;
+}
+
+.logoFont {
+  font-family: 'Bungee', cursive;
 }
 
 body {
@@ -15,29 +27,54 @@ nav {
 
 footer {
   background-color: var(--dark-color);
+}
+
+h1,h2,h3,h4,h5,h6 {
+  color: var(--primary-color);
+}
+
+footer {
   padding-right: 1rem;
 }
 
-footer .social > a {
-  color: var(--white-color);
+footer .social>a {
+  color: var(--light-color);
   opacity: 0.75;
 }
 
-footer .social > a:hover {
+footer .social>a:hover {
   opacity: 0.9;
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: var(--primary-color);
+.bsicon {
+  color: purple;
 }
 
-main > .container {
+.jsicon {
+  color: rgb(197, 197, 3);
+}
+
+.html5icon {
+  color:orangered;
+}
+
+.css3icon {
+  color: rgb(11,82,214);
+}
+
+.checklist>li i {
+  color: var(--secondary-color);
+}
+
+code[class*="language-"],
+pre[class*="language-"] {
+white-space: pre-wrap;
+word-break: break-all;
+word-wrap: break-word;
+}
+
+main>.container {
   padding: 60px 15px 0;
   margin-bottom: 5rem;
 }
@@ -46,30 +83,4 @@ main > .container {
   left: 0;
   bottom: 0;
   width: 100%;
-}
-
-.bsicon {
-  color: purple;
-}
-
-.jsicon {
-  color: rgb(226, 211, 4);
-}
-
-.html5icon {
-  color: orangered;
-}
-.cssicon {
-  color: rgb(11, 82, 214);
-}
-
-.checklist > li i {
-  color: var(--secondary-color);
-}
-
-code[class*="language-"],
-pre[class*="language-"] {
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
 }
